--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <body>
-Hello there, awesome person!
-    </html>
-      </body>
+    <head>
+        <title>No way this is a title!</title>
+    </head>
+
+    <body>
+        Yo, what's up.
+    </body>
+</html>
