--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
         <h1>
         Yo, what's up.
         </h1>
+        
+        <ul>
+    <li>YouTube.com</li>
+    <li>Owl.uwo.ca</li>
+    <li>im sad</li>
+</ul>
+
     </body>
 </html>
