--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <li>YouTube.com</li>
     <li>Owl.uwo.ca</li>
     <li>im sad</li>
+            
+  <li><a href="https://www.youtube.com/">This is a link to GitHub!</a></li>
+
 </ul>
 
     </body>
