--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li>Owl.uwo.ca</li>
     <li>im sad</li>
             
-  <li><a href="https://www.youtube.com/">This is a link to GitHub!</a></li>
+  <li><a href="https://www.youtube.com/channel/UCwdo8-3UrfZ9scHPl0m4Ysg">What would you do?</a></li>
 
 </ul>
 
